--- a/online-shop/online-shop/Views/Category/Index.cshtml
+++ b/online-shop/online-shop/Views/Category/Index.cshtml
@@ -1,36 +1,58 @@
 ﻿@model List<Category>
+    <div class="container">
+        <div class="row pt-4 pb-2">
+            <div class="col-6">
+                <h2 class="text-primary">Category List</h2>
+            </div>
+            <div class="col-6 text-end">
+                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-square"></i> New Category
+                </a>
+            </div>
+
+        </div>
 
 
-<h1>Category list</h1>
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <td>
-                Number
-            </td>
-            <td>
-                Category2
-            </td>
-        </tr>
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <td>
+                        Category
+                    </td>
+                    <td>
+                        Display order
+                    </td>
+                </tr>
 
-    </thead>
+            </thead>
 
-    @foreach (Category category in Model)
-    {
-        <tbody>
-            <tr>
-                <td>
-                    @category.Id
-                </td>
-                <td>
-                    @category.Name
-                </td>
-            </tr>
-        </tbody>
-    }
+            @foreach (Category category in Model)
+            {
+                <tbody>
+                    <tr>
+                        <td>
+                            @category.Name
+                        </td>
+                        <td>
+                            @category.DisplayOrder
+                        </td>
+                        <td>
+                            <div class="w-75 btn-group">
+                                <a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id" class ="btn btn-primary mx-2">
+                                    <i class="bi bi-pencil-square"></i> Edit
+                                </a>
+                                <a asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash3"></i>Delete
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            }
 
 
 
 
 
-</table>
+        </table>
+    </div>
