--- a/online-shop/online-shop/Areas/Admin/Views/Category/Index.cshtml
+++ b/online-shop/online-shop/Areas/Admin/Views/Category/Index.cshtml
@@ -26,7 +26,7 @@
 
             </thead>
 
-            @foreach (Category category in Model)
+            @foreach (Category category in Model.OrderBy(u=>u.DisplayOrder))
             {
                 <tbody>
                     <tr>
