crud on product

--- a/online-shop/online-shop/Areas/Admin/Views/Category/Create.cshtml
+++ b/online-shop/online-shop/Areas/Admin/Views/Category/Create.cshtml
@@ -4,7 +4,7 @@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
-                Create category
+                Edit Product
             </h2>
             <hr />
 
